0024853: CLang warnings -Wunused-const-variable

Unused variables were removed.